Fixed the autoplay bug

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
     <title>Moody's Birthday</title>
-    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
      
@@ -17,7 +17,7 @@
 <button class="button-49" id="play" role="button">Click Here</button>
 </div>
 
-<iframe id="bday" class="hide" width="1120" height="630" src="https://www.youtube.com/embed/jf_mcfOQvwc?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<script src="./assets/scripts/script.js"></script>
+<iframe id="bday" class="hide" width="1120" height="630" src="https://www.youtube.com/embed/rbQxaZXI0Jg?si=W7pfX9pWNk_hY4Q8?&autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<script src="assets/script.js"></script>
 </body>
 </html>
